--- a/cv.html
+++ b/cv.html
@@ -22,7 +22,7 @@
 
             <div class="info">
                 <h2 class="name">Trần Đức Thịnh</h2>
-                <h5 class="job">Thực tập sinh content</h5>
+                <h5 class="job">Fresher React Native/React JS</h5>
             </div>
 
             <div class="followMe">
