--- a/cv.html
+++ b/cv.html
@@ -98,7 +98,7 @@
                     </li>
 
                     <li>
-                        <span>Tham dự Grand Hackathon do MindX tổ chức.<br>Sản phẩm được thực hiện trong 36 tiếng theo
+                        <span>Giải ba cuộc thi Hackathon do MindX tổ chức.<br>Sản phẩm được thực hiện trong 36 tiếng theo
                             đề
                             bài ban tổ chức yêu cầu.
                             <br>Link: <a
