--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     </li>
 
                     <li>
-                        <span>Giải ba cuộc thi Hackathon do MindX tổ chức.<br>Sản phẩm được thực hiện trong 36 tiếng theo
-                            đề
-                            bài ban tổ chức yêu cầu.
+                        <span>Giải ba cuộc thi Hackathon do MindX tổ chức.<br>Sản phẩm là một trò chơi giành cho những
+                            người có định hướng theo ngành CNTT được thực hiện trong 36 tiếng theo
+                            yêu cầu của ban tổ chức.
                             <br>Link: <a
                                 href="https://l.facebook.com/l.php?u=http%3A%2F%2Fmyjscity.atwebpages.com%2Fhome.html%3Ffbclid%3DIwAR0SMf6Hb9eercN8mFJWuZ9WQ930cCh5kdHJt8vknxSo-4Zi5ByzuDL6WXQ&h=AT2V4zpSE1WSsIv462lL3BPqL2r1VgthjdYXT4RQCxJj0nXLFp_wC5Oy5S8doYAjUT2kqQ_d3EUodqp461uR-E2b-UdRpgCCqJubaKcCvQdJ4FQwjkjgRHGGtMyY0YuInyHfTQ">Demo
                                 My-js-city</a>,
