--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
 
                 <ul>
                     <li>
-                        Tham gia các dự án Demo của khoá học tại MindX
+                        Tham gia các dự án Demo của khoá học tại MindX<br>
+                        Một sản phẩm cuối khoá về dịch COVID-19: <a
+                        href="https://thinh1341993.github.io/COVID-19.io/">Demo
+                        Thống kê tình hình dịch bệnh COVID-19</a>
                     </li>
 
                     <li>
