--- a/index.html
+++ b/index.html
@@ -99,7 +99,11 @@
                         href="https://thinh1341993.github.io/COVID-19.io/">Demo
                         Thống kê tình hình dịch bệnh COVID-19</a>
                     </li>
-
+                    <li>
+                        Game xếp hình tự làm: <a
+                        href="https://thinh1341993.github.io/game-puzze/">Demo
+                        Puzze Game</a>
+                    </li>    
                     <li>
                         <span>Giải ba cuộc thi Hackathon do MindX tổ chức.<br>Sản phẩm là một trò chơi giành cho những
                             người có định hướng theo ngành CNTT được thực hiện trong 36 tiếng theo
