--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             người có định hướng theo ngành CNTT được thực hiện trong 36 tiếng theo
                             yêu cầu của ban tổ chức.
                             <br>Link: <a
-                                href="https://l.facebook.com/l.php?u=http%3A%2F%2Fmyjscity.atwebpages.com%2Fhome.html%3Ffbclid%3DIwAR0SMf6Hb9eercN8mFJWuZ9WQ930cCh5kdHJt8vknxSo-4Zi5ByzuDL6WXQ&h=AT2V4zpSE1WSsIv462lL3BPqL2r1VgthjdYXT4RQCxJj0nXLFp_wC5Oy5S8doYAjUT2kqQ_d3EUodqp461uR-E2b-UdRpgCCqJubaKcCvQdJ4FQwjkjgRHGGtMyY0YuInyHfTQ">Demo
+                                href="https://thinh1341993.github.io/my-js-city/">Demo
                                 My-js-city</a>,
                             <a
                                 href="https://drive.google.com/file/d/1qPt1Fk0ZwMINMh3xDluC1yv_lukrPKLB/view?fbclid=IwAR0CM8KtwJ6y03WPYMdUcURF2UCzzXN09LtimtT280IFIlmE9lDl1eTiABk">Thuyết
