--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="contact">
 
             <div class="avatar">
-                <img src="https://scontent.fhan2-5.fna.fbcdn.net/v/t31.0-8/24837216_795332947335292_5401774429381139968_o.jpg?_nc_cat=107&ccb=2&_nc_sid=174925&_nc_ohc=jJUw2Hv0yBsAX_WoAZJ&_nc_ht=scontent.fhan2-5.fna&oh=f9e68af61c115b1965c01dfecd9a0b37&oe=5FBA0E64"
+                <img src="./avatar.jpg"
                     alt="">
             </div>
 
@@ -110,10 +110,7 @@
                             yêu cầu của ban tổ chức.
                             <br>Link: <a
                                 href="https://thinh1341993.github.io/my-js-city/">Demo
-                                My-js-city</a>,
-                            <a
-                                href="https://drive.google.com/file/d/1qPt1Fk0ZwMINMh3xDluC1yv_lukrPKLB/view?fbclid=IwAR0CM8KtwJ6y03WPYMdUcURF2UCzzXN09LtimtT280IFIlmE9lDl1eTiABk">Thuyết
-                                trình</a>
+                                My-js-city</a>
                         </span>
                     </li>
 
